tests/snapshots/parser_error_fixtures/exposing_number_in_list.snap
---
source: tests/error_fixtures/parser_error_fixtures_snapshots.rs
---
Fixture: examples/parser_errors/exposing_number_in_list.flx
== compile ==
failed (parse)
== diagnostics ==
error[E034]: Invalid Exposing List

Expected identifier in `exposing` list.

  examples/parser_errors/exposing_number_in_list.flx:1:22
  |
1 | import Foo exposing (42)
  |                      ^^

Hint:
  Use `exposing (name1, name2)` to expose specific members.
== stdout ==
<not executed>
